--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,4 +15,6 @@ jobs:
       env:
           OPENAI_KEY: ${{ secrets.OPENAI_KEY }}
           TELE_BOT_KEY: ${{ secrets.TELE_BOT_KEY }}
-      run: python main.py
+      run: |
+        python -m pip install requests
+        python main.py
